fixed overflow issues

--- a/styles.css
+++ b/styles.css
@@ -12,25 +12,28 @@ body{
 }
 .container{
     display: grid;
-    grid-template-columns: 0.2fr 0.8fr;
+    grid-template-columns: 25% 75%;
     height: 100%;
     width: 100%;
     gap: 10px;
 }
 .side-bar{
     box-shadow: 2px 0px 10px 0px black;
-    padding: 20px;
+    padding: 40px;
     height: 100%;
 }
 .form{
     display: grid;
     grid-template-rows: repeat(4 1fr);
     gap: 30px;
+    width: 100%;
 }
 
 .form > div{
     display: grid;
     grid-template-columns: 1fr 2fr;
+    gap: 20px;
+    width: 100%;
 }
 .form > button{
     background-color: rgb(36, 92, 36);
@@ -38,41 +41,46 @@ body{
     height: 30px;
     border: none;
     border-radius: 10px;
-    width: 40%;
+    width: fit-content;
 }
 
 .content{
-    padding: 0;
-    margin: 0;
+    padding: auto;
+    margin: 0px;
     height: 100%;
     width: 100%;
 }
 .header{
     margin: 0;
     padding: 10px;
-    color: rgb(36, 92, 36);
+    color: white;
+    background-color: rgb(36, 92, 36);
     width: 100%;
+   
 
 }
 h1{
     text-align: center;
-    font-weight: bolder;
-    font-size: 2.5rem;
+    font-weight: 500px;
+    font-size: 3rem;
+    width: 100%;
 
 }
 .book-list{
-    padding: 20px;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    width: 100%;
 }
 .book-div{
+    margin-block-start: 20px;
     display: grid;
     grid-template-rows: repeat(4 1fr);
     gap: 10px;
     box-shadow: 0px 1px 3px 1px ;
     padding: 10px;
     border-radius: 10px;
+    width: 40%;
 }
 input{
     border: solid rgb(36, 92, 36) 2px;
@@ -89,7 +97,7 @@ input{
 }
 .read-div{
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr;
     gap: 10px;
 }
 .togle-button{
